<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Test</string>
    <string name="hello_world">Hello world!</string>
    <string name="first">第一个</string>
    <string name="three">第三个</string>
    <string name="four">第四个</string>
    <string name="five">第五个</string>
    <string name="second">第二个</string>
    <string name="button_1">按钮</string>
    <string name="text_view_long">跑马灯效果就是这样按钮啥办法接受对方接受的部分即可上课</string>
    <string name="action_settings">Settings</string>
    <string name="username_text">账户:</string>
    <string name="password_text">密码:</string>
    <string name="hint_name_text">请输入用户名</string>
    <string name="hint_password_text">请输入密码</string>
    <string name="button_sure_text">登录</string>
    <string name="button_register_text">注册</string>
    <string name="meituan_free_register_txt">免费注册</string>
    <string name="meituan_fast_enter_txt">无账号快捷登录</string>
    <string name="meituan_cooperation_txt">使用合作网站账号进行登录</string>
    <string name="meituan_content_one_txt">名店抢购</string>
    <string name="meituan_content_two_txt">距离开始</string>
    <string name="meituan_content_more_txt">更多</string>
    <string name="meituan_my_txt">我的</string>
    <string name="meituan_more_txt">更多</string>
    <string name="weixin_text">微信登录</string>
    <string name="find_password_text">忘记密码？</string>
    <string name="meituan_find_password_txt">找回密码</string>
    <string name="meituan_apply_txt">精品应用</string>
    <string name="imp_text">接口</string>
    <string name="inner_text">内部类</string>
    <string name="xml_text">xml实现</string>
    <string name="man_radio">男</string>
    <string name="woman_radio">女</string>
    <string name="system_text">系统定义</string>
    <string name="own_text">自定义</string>
    <string name="hint_text">小提示：第一次登录时请先注册！</string>
    <string name="progress_dialog_txt">进度条对话框</string>
    <string name="datepicker_dialog_txt">时间对话框</string>
    <string name="own_dialog_txt">自定义对话框</string>
    <string name="alert_dialog_txt">自定义alert对话框</string>
    <string name="own_toast_txt">自定义Toast</string>
    <string name="own_way_txt">onCreatDialog实现对话框</string>
    <string name="own_load_toast_txt">正在加载..</string>
    <string name="own_dialog_hint_txt">提示信息！</string>
    <string name="own_dialog_content_txt">退出可能会丢失部分未保存的信息，确认退出？</string>
    <string name="own_dialog_yes_txt">是</string>
    <string name="own_dialog_no_txt">否</string>
    <string name="menu_btn">菜单按钮</string>
    <string name="hello">Hello World, XListViewActivity!</string>
    <string name="app_name1">XListView</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>

</resources>