<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
     <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/first"
        android:textSize="30sp"
        android:gravity="center_horizontal"
        android:background="@android:color/holo_red_dark"
         />

    <TextView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/second"
        android:textSize="30sp"
        android:gravity="center_horizontal"
        android:background="@android:color/holo_red_dark"
         />

    <RelativeLayout android:layout_gravity="bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >
         <TextView android:id="@+id/three_tv"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/three"
       android:layout_alignParentBottom="true"
       android:textSize="30sp"
       android:layout_alignParentLeft="true"
       android:layout_gravity="bottom"
       android:background="@android:color/holo_green_light" />
         
    <TextView
        android:id="@+id/four_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@android:color/holo_green_light"
        android:text="@string/four"
        android:textSize="30sp" />
    
    <TextView
        android:id="@+id/five_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="bottom"
        android:background="@android:color/holo_green_light"
        android:text="@string/five"
        android:textSize="30sp" />

        
        </RelativeLayout>
</LinearLayout>
