<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/system_text" />

    <CheckBox
        android:id="@+id/one"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onChickClick"
        android:text="@string/first" />

    <CheckBox
        android:id="@+id/two"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onChickClick"
        android:text="@string/second" />

    <CheckBox
        android:id="@+id/three3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onChickClick"
        android:text="@string/three" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/own_text" />

    <CheckBox
        android:id="@+id/first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/sex_button_selector"
        android:button="@null"
        android:gravity="center"
        android:onClick="onOwnChickClick"
        android:text="@string/first"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/sex_button_selector"
        android:button="@null"
        android:gravity="center"
        android:onClick="onOwnChickClick"
        android:text="@string/second"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/sex_button_selector"
        android:button="@null"
        android:gravity="center"
        android:onClick="onOwnChickClick"
        android:text="@string/three"
        android:textSize="20sp" />

</LinearLayout>