<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/btn_style_two_pressed"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/dialog_title_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/own_dialog_hint_txt"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/dialog_content_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_title_txt"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:gravity="center"
        android:text="@string/own_dialog_content_txt"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_content_txt"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/dialog_yes_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/own_dialog_yes_txt" />

        <Button
            android:id="@+id/dialog_no_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:text="@string/own_dialog_no_txt" />
    </LinearLayout>

</RelativeLayout>