<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_bright"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first" 
        android:textSize="40sp"
        android:background="@android:color/holo_orange_dark"
        android:layout_marginTop="20dp"
        
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        
        android:text="@string/second" 
        android:textSize="40sp"
        android:background="@android:color/holo_orange_dark"
        android:layout_marginTop="20dp"
        android:paddingTop="30dp"
        />
    
    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/button_1"
        android:textSize="40sp"
        android:onClick="onClickSwitchActivity"
        />
    
</LinearLayout>
