<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    android:orientation="vertical" >
    
    <TextView android:id="@+id/test_txt"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textColor="@color/color_lilac"
        android:textSize="20sp"
        />
	
    <Button android:id="@+id/imp_button_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/imp_text"
        />
     <Button android:id="@+id/inner_button_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/inner_text"
        />
     
     <!-- onClick定义触发事件 -->
     <Button android:id="@+id/xml_button_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/xml_text"
        android:onClick="onClickXml"
        />
     
     
</LinearLayout>
